# klight

./: .gitignore  ARCHITECTURE.md  HANDOFF.md  README.md  ROADMAP.md  WORKSHOP.md  klight-catalog.yaml  klight.yaml.schema.json
.github/workflows/: deploy-staging.yml  pages.yml  pr-environment.yml  publish.yml  test.yml
docs/: 01-overview.md  02-core-concepts.md  03-getting-started.md  04-environment-lifecycle.md  05-adding-a-service.md  06-database-patterns.md  07-secrets-and-config.md  08-service-dependencies.md  09-service-profiles.md  10-ci-cd-integration.md  11-cli-reference.md  12-platform-agents.md  13-devops-team-setup.md  14-local-vs-remote.md  15-vision-setup-wizard.md  16-mcp-integration.md
examples/company-infra/: README.md  klight.toml
examples/company-infra/manifests/profiles/: core.yaml  vertical1.yaml  vertical2.yaml
examples/tiendademo-manifests/profiles/: store.yaml
klight/: pyproject.toml
klight-ui/: package.json  playwright.config.ts  server.py
klight-ui/tests/: helpers.ts  wizard-devops.spec.ts  world1-local.spec.ts  world1-watch.spec.ts  world2-sync.spec.ts  world3-remote.spec.ts
klight-ui/tests/report/: index.html
klight/klight/: __init__.py  catalog.py  cli.py  config.py  kubectl.py  manifest_gen.py  mcp_server.py  scanner.py  schema.py
klight/klight/commands/: _context.py  db.py  env.py  exec_.py  init_.py  local.py  open_.py  preflight.py  profile.py  ps.py  replace.py  repos.py  service.py  setup.py  sync.py  target.py  ui.py  unready.py  vault.py  watch.py
klight/tests/: conftest.py  test_local.py  test_watch.py
manifests/: README.md
manifests/env/config/: global.env  kustomization.yaml
manifests/env/secrets/: global.env.example  kustomization.yaml
manifests/infrastructure/kafka/base/: kustomization.yaml  service.yaml  statefulset.yaml
manifests/infrastructure/localstack/base/: service.yaml  statefulset.yaml
manifests/infrastructure/postgres/base/: service.yaml  statefulset.yaml
manifests/infrastructure/redis/base/: service.yaml  statefulset.yaml
manifests/infrastructure/vault/base/: service.yaml  statefulset.yaml
manifests/jobs/_template/base/: job.yaml
manifests/services/_template/base/: deployment.yaml  service.yaml
schema/: klight.yaml.json
sentinel/: Dockerfile  README.md  sentinel.sh
(+16 files in other folders)
